fixed some styling issues for mobile and made the tags work on mobile

--- a/src/styles/modules/_m-users.scss
+++ b/src/styles/modules/_m-users.scss
@@ -8,6 +8,7 @@
 
     @media (max-width: 1000px) {
         border-radius: 0;
+        padding: 40px;
     }
 
     a {
